correction version mobile

--- a/mobile_responsive.css
+++ b/mobile_responsive.css
@@ -4,6 +4,7 @@
 
 	body {
 		width: auto;
+        margin: 0;
 	}
 	.page {
 		width: auto;
@@ -33,9 +34,6 @@
 	.sinscrire {
 		order: 0;
 	}
-	header h1 {
-		padding-top: 20px;
-	}
 	.filtres {
 		width: auto;
 		flex-direction: column;
@@ -44,6 +42,7 @@
 		align-items: flex-start;
 		justify-content: flex-start;
 		margin-top: 30px;
+        margin-bottom: auto;
 	}
 	.filtres ul {
 		flex-wrap: wrap;
@@ -53,6 +52,9 @@
 	.filtres ul li {
 		margin: 0 10px 10px 0;
 	}
+    form {
+        margin-top: 30px;
+    }
 	.loupe {
 		display: flex;
 	}
@@ -71,6 +73,9 @@
 	label i {
 		color: #ffffff;
 	}
+    main {
+        margin: 30px 0 0 0;
+    }
 	.partie1_main {
 		flex-direction: column-reverse;
 	}
@@ -84,7 +89,8 @@
     }
     .article_hebergements {
     	width: 90%;
-    	margin-left: 10px;
+    	margin-left: 5%;
+        box-shadow: 0 0 5px 5px #F2F2F2;
     }
     #afficher_plus {
         padding: 20px 0 0 20px;
@@ -96,7 +102,8 @@
     }
     .article_populaires {
     	width: 90%;
-    	margin-left: 10px;
+    	margin-left: 5%;
+        box-shadow: 0 0 5px 5px #F2F2F2;
     }
     #activites {
     	flex-direction: column;
@@ -152,8 +159,17 @@
     footer {
     	flex-direction: column;
     	width: auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
     .elements_footer {
     	margin-left: 30px;
+
+    }
+    footer h4 {
+        margin-bottom: auto;
+    }
+    footer div ul {
+        margin-top: 10px;
     }
 }
